--- a/index/main.css
+++ b/index/main.css
@@ -59,6 +59,7 @@ figure:hover{
         transform: scale(1.10);
 }
 p{
-        text-align: right;
-        color: white;
+        text-align: center;
+        color: rgb(236, 146, 71);
+        font-size: 25px;
 }
