--- a/index/Extensiones/Global Extension.css
+++ b/index/Extensiones/Global Extension.css
@@ -34,6 +34,9 @@ a{
         color: white;
         text-decoration: none;
 }
+a.pan{
+    display: inline-block;
+}
 a:hover{
         color: rgb(204, 16, 204);
 }
